--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,58 +1,77 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="@dimen/activity_vertical_margin" >
 
-    <!-- Twitter Login Button -->
-    <Button android:id="@+id/btnLoginTwitter"
+    <RelativeLayout
+        android:id="@+id/login_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Login with Twitter"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="30dip"/>
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:visibility="visible" >
 
-    <!-- user name label -->
-    <TextView android:id="@+id/lblUserName"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:padding="10dip"
-        android:layout_marginTop="30dip"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="@string/login_instructions"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#0080B4" />
 
-    <!-- label update status -->
-    <TextView android:id="@+id/lblUpdate"
-        android:text="Update Status"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:visibility="gone"/>
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:background="#0080B4"
+            android:text="@string/btn_login"
+            android:textColor="#fff" />
+    </RelativeLayout>
 
-    <!-- Tweet EditText -->
-    <EditText android:id="@+id/txtUpdateStatus"
+    <LinearLayout
+        android:id="@+id/share_layout"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dip"
-        android:visibility="gone"/>
+        android:layout_height="fill_parent"
+        android:orientation="vertical"
+        android:visibility="gone" >
 
-    <!-- Tweet Button -->
-    <Button android:id="@+id/btnUpdateStatus"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Tweet"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/user_name"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="10dp"
+            android:text="@string/hello"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:textColor="#0080B4" />
 
-    <!-- Twitter Logout button -->
-    <Button android:id="@+id/btnLogoutTwitter"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Logout from Twitter"
-        android:layout_marginLeft="10dip"
-        android:layout_marginRight="10dip"
-        android:layout_marginTop="50dip"
-        android:visibility="gone"/>
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="fill_parent"
+            android:layout_height="150dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/lakeside_view" />
+
+        <EditText
+            android:id="@+id/share_text"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:background="#cceaf3"
+            android:hint="@string/share_instructions"
+            android:inputType="textMultiLine"
+            android:minLines="5"
+            android:padding="10dp" />
+
+        <Button
+            android:id="@+id/btn_share"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="#0080B4"
+            android:text="@string/btn_share"
+            android:textColor="#fff" />
+    </LinearLayout>
 
 </LinearLayout>
