--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,37 @@
         android:orientation="vertical"
         android:visibility="visible" >
 
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:src="@drawable/kinoheft"
+            android:layout_marginBottom="205dp"
+            android:layout_above="@+id/textView"
+            android:layout_alignParentStart="true" />
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
             android:text="@string/login_instructions"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#0080B4" />
+            android:textColor="#0080B4"
+            android:id="@+id/textView"
+            android:layout_marginBottom="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true" />
 
         <Button
             android:id="@+id/btn_login"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
             android:background="#0080B4"
             android:text="@string/btn_login"
-            android:textColor="#fff" />
+            android:textColor="#fff"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentBottom="true"
+            android:layout_above="@+id/textView" />
+
     </RelativeLayout>
 
     <LinearLayout
@@ -36,22 +51,43 @@
         android:layout_height="fill_parent"
         android:orientation="vertical"
         android:visibility="gone" >
-
-        <TextView
-            android:id="@+id/user_name"
-            android:layout_width="fill_parent"
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingBottom="10dp"
-            android:text="@string/hello"
-            android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textColor="#0080B4" />
+            android:layout_marginBottom="30dp"
+            android:layout_gravity="top"
+            android:weightSum="1">
 
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="fill_parent"
-            android:layout_height="150dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/lakeside_view" />
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent">
+
+                <TextView
+                    android:id="@+id/user_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingBottom="10dp"
+                    android:text="@string/hello"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="#0080B4"
+                    android:textStyle="bold"
+                    android:layout_gravity="left|top"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="15dp" />
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/imageButton"
+                    android:src="@drawable/fail"
+                    android:layout_gravity="right|top"
+                    android:contentDescription="@string/logoutButton"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:onClick="logoutButtonKlicked"/>
+            </RelativeLayout>
+        </LinearLayout>
 
         <EditText
             android:id="@+id/share_text"
@@ -72,6 +108,12 @@
             android:background="#0080B4"
             android:text="@string/btn_share"
             android:textColor="#fff" />
-    </LinearLayout>
 
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/smsListView"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="50dp" />
+    </LinearLayout>
 </LinearLayout>
