--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -76,6 +76,15 @@
                     android:layout_alignParentStart="true"
                     android:layout_marginTop="15dp" />
 
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="test SMS"
+                    android:id="@+id/button"
+                    android:layout_marginLeft="150dp"
+                    android:onClick="sendTestSMSClicked"
+                    android:nestedScrollingEnabled="true" />
+
                 <ImageButton
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
